--- a/app/assets/stylesheets/partials/modules/_price-strip.scss
+++ b/app/assets/stylesheets/partials/modules/_price-strip.scss
@@ -12,6 +12,7 @@
 
  .price-strip {
   position: relative;
+  background-color: $color-grey-light-3;
   color: $color-txt-dark;
   font-weight: bold;
 }
