--- a/app/views/shared/tiles/_curation.html.erb
+++ b/app/views/shared/tiles/_curation.html.erb
@@ -29,6 +29,6 @@
 </div>
 <%# //Meta %>
 
-<%# Tile curation alternative icon %>
+<%# Alternative icon %>
 <span class="tile__icon-alt icon icon--product-curation icon--flush-top icon--lrg" aria-hidden="true"></span>
-<%# //Tile curation alternative icon %>
+<%# //Alternative icon %>
