Clean up after device/browser testing

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,7 +22,7 @@
       <%# //Product name and brand %>
 
       <%# Product price %>
-      <p class="price-strip price-strip--lrg island-sides islet-ends <%= 'is-long-price' if @product.price.floor > 6 %>">
+      <p class="price-strip price-strip--lrg island-sides islet-ends <%= 'is-long-price' if @product.price.to_s.length > 5 %>">
         <%- if @product.is_discounted -%>
           <span class="price-strip__normal hide-visually">Normal price: </span>
           <s class="price-strip__normal"><%= Money.new(@product.price).format %></s>
