--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -24,10 +24,9 @@
       <%# Hero heading wrap %>
       <div class="national__heading__intro">
         <h1>
-          <span>Westfield Sydney, <time datetime="2014-04-15T12:00:00+1000">12pm Tuesday 15th</time></span>
-          GIULIANA RANCIC
+          <span><%= @centres.length %> centres. Over 10,300 stores. Over <%= number_with_delimiter(@products_count, separator: ',') %> products</span>
+          HAPPY EASTER
         </h1>
-        <a href="http://www.westfield.com.au/sydney/events/3871">Event details<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
       </div>
       <%# //Hero heading wrap %>
 
