--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -10,12 +10,12 @@
 
       <%# Facebook %>
       <% if @centre.facebook.present? %>
-        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
-          <a href="<%= @centre.facebook %>" class="flag flag--spacing-half flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.facebook %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
             <div class="flag__img">
-              <!-- <div class="box islet island-non-palm box--sphere"> -->
-                <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm icon--sphere" aria-hidden="true"></span>
-              <!-- </div> -->
+              <div class="box box--sphere islet island-non-palm">
+                <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
+              </div>
             </div>
             <div class="flag__body">Facebook</div>
           </a>
@@ -25,11 +25,11 @@
 
       <%# Twitter %>
       <% if @centre.twitter.present? %>
-        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
-          <a href="<%= @centre.twitter %>" class="flag flag--spacing-half flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.twitter %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
             <div class="flag__img">
-              <div class="box islet island-non-palm box--sphere">
-                <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm" aria-hidden="true"></span>
+              <div class="box box--sphere islet island-non-palm">
+                <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">Twitter</div>
@@ -40,11 +40,11 @@
 
       <%# Instagram %>
       <% if @centre.instagram.present? %>
-        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
-          <a href="<%= @centre.instagram %>" class="flag flag--spacing-half flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.instagram %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
             <div class="flag__img">
-              <div class="box islet island-non-palm box--sphere">
-                <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm" aria-hidden="true"></span>
+              <div class="box box--sphere islet island-non-palm">
+                <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">Instagram</div>
@@ -55,11 +55,11 @@
 
       <%# Pinterest %>
       <% if @centre.pinterest.present? %>
-        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
-          <a href="<%= @centre.pinterest %>" class="flag flag--spacing-half flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.pinterest %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
             <div class="flag__img">
-              <div class="box islet island-non-palm box--sphere">
-                <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm" aria-hidden="true"></span>
+              <div class="box box--sphere islet island-non-palm">
+                <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">Pinterest</div>
@@ -70,11 +70,11 @@
 
       <%# YouTube %>
       <% if @centre.youtube.present? %>
-        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
-          <a href="<%= @centre.youtube %>" class="flag flag--spacing-half flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.youtube %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
             <div class="flag__img">
-              <div class="box islet island-non-palm box--sphere">
-                <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm" aria-hidden="true"></span>
+              <div class="box box--sphere islet island-non-palm">
+                <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">YouTube</div>
@@ -85,11 +85,11 @@
 
       <%# Google+ %>
       <% if @centre.google_plus.present? %>
-        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
-          <a href="<%= @centre.google_plus %>" class="flag flag--spacing-half flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.google_plus %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
             <div class="flag__img">
-              <div class="box islet island-non-palm box--sphere">
-                <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm" aria-hidden="true"></span>
+              <div class="box box--sphere islet island-non-palm">
+                <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">Google+</div>
