--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -10,8 +10,8 @@
 
       <%# Facebook %>
       <% if @centre.facebook.present? %>
-        <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.facebook %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+          <a href="<%= @centre.facebook %>" class="flag flag--shrink-wrap flag--spacing-half social-follow" rel="external" target="_blank">
             <div class="flag__img">
               <div class="box box--sphere islet island-non-palm">
                 <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
@@ -25,8 +25,8 @@
 
       <%# Twitter %>
       <% if @centre.twitter.present? %>
-        <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.twitter %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+          <a href="<%= @centre.twitter %>" class="flag flag--shrink-wrap flag--spacing-half social-follow" rel="external" target="_blank">
             <div class="flag__img">
               <div class="box box--sphere islet island-non-palm">
                 <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
@@ -40,8 +40,8 @@
 
       <%# Instagram %>
       <% if @centre.instagram.present? %>
-        <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.instagram %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+          <a href="<%= @centre.instagram %>" class="flag flag--shrink-wrap flag--spacing-half social-follow" rel="external" target="_blank">
             <div class="flag__img">
               <div class="box box--sphere islet island-non-palm">
                 <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
@@ -55,8 +55,8 @@
 
       <%# Pinterest %>
       <% if @centre.pinterest.present? %>
-        <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.pinterest %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+          <a href="<%= @centre.pinterest %>" class="flag flag--shrink-wrap flag--spacing-half social-follow" rel="external" target="_blank">
             <div class="flag__img">
               <div class="box box--sphere islet island-non-palm">
                 <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
@@ -70,8 +70,8 @@
 
       <%# YouTube %>
       <% if @centre.youtube.present? %>
-        <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.youtube %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+          <a href="<%= @centre.youtube %>" class="flag flag--shrink-wrap flag--spacing-half social-follow" rel="external" target="_blank">
             <div class="flag__img">
               <div class="box box--sphere islet island-non-palm">
                 <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
@@ -85,8 +85,8 @@
 
       <%# Google+ %>
       <% if @centre.google_plus.present? %>
-        <li class="grid__item one-half non-palm-one-quarter">
-          <a href="<%= @centre.google_plus %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+          <a href="<%= @centre.google_plus %>" class="flag flag--shrink-wrap flag--spacing-half social-follow" rel="external" target="_blank">
             <div class="flag__img">
               <div class="box box--sphere islet island-non-palm">
                 <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top icon--hecto-non-palm icon--xlrg" aria-hidden="true"></span>
