add modifier comment

--- a/app/assets/stylesheets/partials/abstractions/_flag.scss
+++ b/app/assets/stylesheets/partials/abstractions/_flag.scss
@@ -6,6 +6,7 @@
   Place any image- and text-like content side-by-side with vertical alignment.
 
   .flag--shrink-wrap          - Shrink wrap
+  .flag--spacing-half         - Half base padding-right
 
   Styleguide Flag
 */
