--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -107,7 +107,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-category" wf-filter-submit ng-show="activeFilter === 'category'" class="filters__target pointer-up">
+            <div id="filters-category" wf-filter-submit ng-show="activeFilter === 'category'" class="filters__target pointer-up js-products-filter-dropdown">
               <div ng-show="search.categories.field === 'super_cat'"><div ng-include src="'CategoryItemTemplate'"></div></div>
               <div ng-show="search.categories.field === 'category'"><div ng-include src="'CategoryItemTemplate'"></div></div>
               <div ng-show="search.categories.field === 'sub_category'"><div ng-include src="'SubCategoryTemplate'"></div></div>
@@ -133,7 +133,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-retailer" wf-filter-submit ng-show="activeFilter === 'retailer'" class="filters__target pointer-up">
+            <div id="filters-retailer" wf-filter-submit ng-show="activeFilter === 'retailer'" class="filters__target pointer-up js-products-filter-dropdown">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.retailers.title }}</h3>
@@ -176,7 +176,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-brand" wf-filter-submit ng-show="activeFilter === 'brand'" class="filters__target pointer-up">
+            <div id="filters-brand" wf-filter-submit ng-show="activeFilter === 'brand'" class="filters__target pointer-up js-products-filter-dropdown">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.brands.title }}</h3>
@@ -219,7 +219,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-colour" wf-filter-submit ng-show="activeFilter === 'colour'" class="filters__target pointer-up">
+            <div id="filters-colour" wf-filter-submit ng-show="activeFilter === 'colour'" class="filters__target pointer-up js-products-filter-dropdown">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.colours.title }}</h3>
@@ -257,7 +257,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-size" wf-filter-submit ng-show="activeFilter === 'size'" class="filters__target pointer-up">
+            <div id="filters-size" wf-filter-submit ng-show="activeFilter === 'size'" class="filters__target pointer-up js-products-filter-dropdown">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.sizes.title }}</h3>
@@ -295,7 +295,7 @@
             </button>
             <%# //Wide view trigger %>
 
-            <div id="filters-price" wf-filter-submit ng-show="activeFilter === 'price'" class="filters__target pointer-up">
+            <div id="filters-price" wf-filter-submit ng-show="activeFilter === 'price'" class="filters__target pointer-up js-products-filter-dropdown">
 
               <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                 <h3>{{ search.price.title }}</h3>
