--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -46,7 +46,7 @@
             <div class="search-results__inner js-search-results-keyboard-scrolling">
               <dl class="search-results__list" >
                 <dt ng-repeat-start="key in sortOrderTypes" class="search-results__list__spacing" ng-if="suggestions[key]">
-                  <span aria-hidden="true" class="icon {{iconMapping(key)}} icon--xlrg"></span> {{unsnake(key)}}
+                  <span aria-hidden="true" class="icon {{iconMapping(key)}} icon--lrger"></span> {{unsnake(key)}}
                 </dt>
                 <dd class="js-search-results-item-height" ng-repeat-end ng-repeat="suggestion in suggestions[key]" role="presentation">
                   <a target="_self" ng-class="{'is-focused': suggestion === focusedSuggestion}" ng-href="{{url(suggestion)}}" tabindex="-1">{{suggestion.description}}</a>
