--- a/app/assets/stylesheets/partials/base/_headings.scss
+++ b/app/assets/stylesheets/partials/base/_headings.scss
@@ -19,4 +19,6 @@ h1, .h1 {
   font-weight: 300;
   /* This is needed to turn off the top margin set in 'utils/normalize' */
   margin-top: 0;
+
+  mark {font-weight: normal}
 }
