--- a/app/assets/stylesheets/partials/base/_misc.scss
+++ b/app/assets/stylesheets/partials/base/_misc.scss
@@ -51,3 +51,12 @@ code {color: $color-blue;}
 /* [STRIKETHOUGH]
 -------------------------------------------------------*/
 s {text-decoration: line-through;}
+
+
+/* [MARK]
+-------------------------------------------------------*/
+mark {
+  background-color: transparent;;
+  font-weight: strong;
+  color: inherit;
+}
