--- a/app/views/styleguide/modules/_social_follow.html.erb
+++ b/app/views/styleguide/modules/_social_follow.html.erb
@@ -2,7 +2,7 @@
 <ul class="grid grid--mrg-base-non-palm grid--non-linear">
 
   <li class="grid__item one-half non-palm-one-quarter">
-    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+    <a href="#" class="flag flag--shrink-wrap" rel="external" target="_blank">
   <div class="flag__img">
     <div class="box islet">
       <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
@@ -13,7 +13,7 @@
   </li>
 
   <li class="grid__item one-half non-palm-one-quarter">
-    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+    <a href="#" class="flag flag--shrink-wrap" rel="external" target="_blank">
       <div class="flag__img">
         <div class="box islet">
           <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
@@ -24,7 +24,7 @@
   </li>
 
   <li class="grid__item one-half non-palm-one-quarter">
-    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+    <a href="#" class="flag flag--shrink-wrap" rel="external" target="_blank">
       <div class="flag__img">
         <div class="box islet">
           <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
@@ -35,7 +35,7 @@
   </li>
 
   <li class="grid__item one-half non-palm-one-quarter">
-    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+    <a href="#" class="flag flag--shrink-wrap" rel="external" target="_blank">
       <div class="flag__img">
         <div class="box islet">
           <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
@@ -46,7 +46,7 @@
   </li>
 
   <li class="grid__item one-half non-palm-one-quarter">
-    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+    <a href="#" class="flag flag--shrink-wrap" rel="external" target="_blank">
       <div class="flag__img">
         <div class="box islet">
           <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
@@ -57,7 +57,7 @@
   </li>
 
   <li class="grid__item one-half non-palm-one-quarter">
-    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+    <a href="#" class="flag flag--shrink-wrap" rel="external" target="_blank">
       <div class="flag__img">
         <div class="box islet">
           <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
